2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c, rbgtkscale.c: Fix warning for GTK+-2.2.x.
	* src/rbgtkclipboard.c: Fix warning for GTK+-2.0.x. 

2004-11-06  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbgtktoolbutton.c: Gtk::ToolButton.new
	  Use Symbols instead of Strings for stock-id (as elsewhere)
	
	* src/rbgtkselectiondata.c: rbgtk_atom2selectiondata()
	  Calculate length properly (take format size into account)
	  
	* src/rbgtkdrag.c: Gtk::Drag.dest_set()
	  Allow nil as well as empty target list
          (ie. accept any rather than accept none)
	
	* src/rbgtkallocation.c: Gtk::Allocation
	  Make object non-copyable (ie. modify original values in struct)
	
	* src/rbgdkrgb.c: Gdk::RGB#find_color
	  Fix passing of colormap to gdk_rgb_find_color()

2004-11-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkactiongroup.c: Accept nil correctly in Gtk::ActionGroup#add_action. 

2004-10-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkselectiondata.c: Fix a warning. 
	* src/rbgtkaction.c: Gtk::Action.new can omit 3rd, 4th parameters.

2004-10-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkuimanager.c: Initialize GError first. 

2004-10-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextiter.c: Gtk::TextIter#[forward|backward]_search works on
	GTK+-2.4.x. Bug #1050440.

2004-10-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeiter.c: Gtk::TreeIter#[] checks the iter is valid or not
	for GTK+-2.2.x.

2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* extconf.rb: Replaced "$objs <<" with add_obj.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gtk2.rb: Improved log handling.
	Define Gtk::LOG_DOMAIN, Gdk::LOG_DOMAIN.
	Rename GLib::Log.set_error_domain to GLib::Log.set_log_domain.

2004-08-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilechooser.c: Added Gtk::FileChooserEmbed.

2004-08-30  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgtktreeiter.c: Fix memory leaks of Gtk::TreeIter#path.
